--- a/css/user_profile.css
+++ b/css/user_profile.css
@@ -165,3 +165,65 @@ mark{
     /* (E2) THE FONT - NOT REALLY IMPORTANT */
     font-weight: bold;
   }
+
+
+  #forgot-pass {
+    color: #919191;
+    font-family: 'Poppins', sans-serif;
+    font-size: 10pt;
+    margin-top: 3px;
+    text-align: right;
+  }
+  #card {
+    background: #e4d2aa;
+    border-radius: 8px;
+    height: 380px;
+    margin: 6rem auto 8.1rem auto;
+    width: 329px;
+    padding: 10px;
+  }
+  #card-content {
+    padding: 12px 44px;
+  }
+  #signup {
+    color: #919191;
+    font-family: 'Poppins', sans-serif;
+    font-size: 10pt;
+    margin-top: 16px;
+    text-align: center;
+  }
+  #submit-btn {
+    background: #717273;
+    border: none;
+    border-radius: 5px;
+    box-shadow: 0px 1px 8px #919191;
+    cursor: pointer;
+    color: white;
+    font-family: 'Poppins', sans-serif;
+    height: 42.3px;
+    margin: 0 auto;
+    margin-top: 50px;
+    transition: 0.25s;
+    width: 153px;
+  }
+  #submit-btn:hover {
+    box-shadow: 0px 1px 18px #717273;
+  }
+  .form {
+    align-items: left;
+    display: flex;
+    flex-direction: column;
+    padding-top: 30px;
+  }
+  .form-border {
+    border-top: solid 1px #717273;
+    height: 1px;
+    width: 100%;
+    padding-bottom: 30px;
+  }
+  .form-content {
+    background: #e4d2aa;
+    border: none;
+    outline: none;
+    padding-top: 14px;
+  }
