--- a/templates/user_profile.html
+++ b/templates/user_profile.html
@@ -1,3 +1,5 @@
+
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,14 +7,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VRite4U</title>
-    <link rel="stylesheet" href="../css/user_profile.css">
+    <script src="{% static '/javascript/user_profile.js' %}"></script>
+    <link rel="stylesheet" href="{% static '/css/user_profile.css' %}">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
 </head>
-
 <body>
     <nav class="navbar navbar-expand-lg" style="background-color: #888888">
         <a class="navbar-brand" href="#" style="color:#f4c430; font-family:'Yeseva One'; "><strong>VRite4U</strong></a>
@@ -23,10 +25,10 @@
             <ul class="navbar-nav navbar-right">
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      <img src = "../images/user_icon.png" width="50px" height="50px" alt = "user_icon">
+                      <img src = "{% static '/images/user_icon.png' %}" width="50px" height="50px" alt = "user_icon">
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                      <a class="dropdown-item" href="#">Profile</a>
+                      <a class="dropdown-item" href="{% url 'profile' %}">Profile</a>
                       <a class="dropdown-item" href="#">About</a>
                       <a class="dropdown-item" href="#">Log out</a>
                     </div>
@@ -34,19 +36,29 @@
             </ul>
         </div>
       </nav>
-      <div id="card">
-        <div id="card-content">
-          <form method="post" class="form">
-            <input id="user-name" class="form-content" type="email" name="email" autocomplete="on" placeholder="Username" required />
-            <div class="form-border"></div>
-            <input id="user-password" class="form-content" type="password" name="password" placeholder="Password"  required />
-            <div class="form-border"></div>
-            <a href="#">
-              <legend id="forgot-pass">Forgot password?</legend>
-            </a>
-            <input id="submit-btn" type="submit" name="submit" value="LOGIN" />
-            <a href="#" id="signup">Don't have account yet?</a>
-          </form>
+
+    <div class = "profile">
+        <img src = "{% static '/images/user_icon.png' %}" alt = "user_icon">
+        <div class = "profile-details">
+            <!-- <h1>dolores339</h1> -->
+            <h3 id="name_profile">{{email}}</h3>
         </div>
-      </div>
+    </div>
+    <div class = "grid-container">
+        
+        {% for i in arr %}
+        <div class = "grid-item">
+            <div class="content">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod....
+            </div>
+            <div class="date">
+                <i>3:55 p.m</i>
+            </div>
+        </div>
+        {% endfor %}
+    </div>
+    <script>
+        name();
+    </script>
 </body>
+</html>
