Fix right click bug

--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -20,7 +20,7 @@
         position: absolute; 
         text-align: center; 
         background: lightgray; 
-        border: 1px solid black; 
+        /* border: 1px solid black;  */
     } 
     
     .context-menu ul { 
@@ -33,7 +33,7 @@
     .context-menu ul li { 
         padding-bottom: 7px; 
         padding-top: 7px; 
-        border: 1px solid black; 
+        /* border: 1px solid black;  */
     } 
     
     .context-menu ul li a { 
@@ -42,7 +42,7 @@
     } 
     
     .context-menu ul li:hover { 
-        background: darkgray; 
+        background: lightgray; 
     } 
     
     </style>
@@ -130,8 +130,8 @@
               <h6 data-toggle="collapse" data-target="#demo1"><strong>Themes Identified  <i class="fa fa-angle-down" style="font-size:24px;color:white"></i></strong> </h6>
               <br>
               <div class="themes" id="demo1" class="collapse">
-                <mark style="background-color: #888888;">Lorem</mark>
-                <mark style="background-color: #888888;">ipsum</mark>
+                <mark style="background-color: #888888; border-radius: 3px;">Lorem</mark>
+                <mark style="background-color: #888888; border-radius: 3px;">ipsum</mark>
               </div>
               <h6 data-toggle="collapse" data-target="#demo2"><strong>Links Suggestion <i class="fa fa-angle-down" style="font-size:24px;color:white"></i></strong></h6>
               <br>
@@ -144,13 +144,13 @@
               <br>
               <div id="demo3" class="collapse">
                 {{syn}}
-                <mark style="background-color: #888888;">dolor</mark>
-                <mark style="background-color: #888888;">sit</mark>
-                <mark style="background-color: #888888;">amet</mark>
+                <mark style="background-color: #888888; border-radius: 3px;">dolor</mark>
+                <mark style="background-color: #888888; border-radius: 3px;">sit</mark>
+                <mark style="background-color: #888888; border-radius: 3px;">amet</mark>
                 <br><br>
-                <mark style="background-color: #888888;">dolor</mark>
-                <mark style="background-color: #888888;">sit</mark>
-                <mark style="background-color: #888888;">amet</mark>
+                <mark style="background-color: #888888; border-radius: 3px;">dolor</mark>
+                <mark style="background-color: #888888; border-radius: 3px;">sit</mark>
+                <mark style="background-color: #888888; border-radius: 3px;">amet</mark>
                 <br><br>
                 
               </div>
@@ -178,8 +178,9 @@
     </div> 
     
     <script> 
-      document.onclick = hideMenu; 
-      document.oncontextmenu = rightClick; 
+      var txtarea = document.getElementById("tarea");
+      txtarea.onclick = hideMenu; 
+      txtarea.oncontextmenu = rightClick; 
 
       function hideMenu() { 
           document.getElementById( 
