Fix right click bug and css changes

--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -25,7 +25,7 @@
         position: absolute; 
         text-align: center; 
         background: lightgray; 
-        border: 1px solid black; 
+        /* border: 1px solid black;  */
     } 
     
     .context-menu ul { 
@@ -38,7 +38,7 @@
     .context-menu ul li { 
         padding-bottom: 7px; 
         padding-top: 7px; 
-        border: 1px solid black; 
+        /* border: 1px solid black;  */
     } 
     
     .context-menu ul li a { 
@@ -99,7 +99,7 @@
         <form action="/../check" method="GET" enctype="multipart/form-data">
           <div id="input-text" class="disp-text">
             
-            <textarea placeholder="Type your essay here" name="para" id="tarea" >
+            <textarea placeholder="Type your essay here" name="para" id="tarea" style="padding-left: 40px;">
              {{content}}
             </textarea>
             <!-- <p contenteditable="true" name='para'>{{content}}</p> -->
@@ -112,8 +112,8 @@
               </div>
 
               <div style="margin-left:270px;" id="submit-button">  
-                <button type="submit" >
-                  <img src="{% static '/images/checkbutton.png' %}" />
+                <button type="submit" style="background: url(../static/images/checkbutton.png); width: 88px; height: 35px; border-radius: 3px; border:none;">
+                  <!-- <img src="{% static '/images/checkbutton.png' %}"  /> -->
                 </button>
               </div>
 
@@ -136,14 +136,14 @@
               <ul style="margin-top:30px;list-style-type:none;" id="demo" class="collapse">
                 {% for rule,val in finals.items %}
                 <li>
-                  <img src="{% static '/images/wrong.png'%}" >
+                  <img src="{% static '/images/wrong.png'%}" style="border-radius:100%;" >
                   {{val.first}} <b>{{val.error_text}}</b> {{val.last}}
                   
 
                   <!-- Delectus iste autem odit eum ipsam similique veritatis aspernatur. -->
                 </li>
                 <li>
-                  <img src="{% static '/images/correct.png' %}" style="float:left;">
+                  <img src="{% static '/images/correct.png' %}" style="float:left; border-radius: 100%;">
                   {{val.corr}}
                 </li>
                 <br>
@@ -153,9 +153,9 @@
 
               <h6 data-toggle="collapse" data-target="#demo1"><strong>Themes Identified  <i class="fa fa-angle-down" style="font-size:24px;color:white"></i></strong> </h6>
               <br>
-              <div class="themes" id="demo1" class="collapse">
+              <div class="themes" id="demo1" class="collapse" style="margin-left: 40px;">
                 {% for theme in themes%}
-                <button type="button" class="btn btn-secondary" id="theme-id" onclick="findlink(this);" style="margin-top: 20px; margin: left 40px;">{{theme}}</button>
+                <button type="button" class="btn btn-secondary" id="theme-id" onclick="findlink(this);" style="margin-top: 10px; ">{{theme}}</button>
                 {% endfor %}
               </div>
               <h6 data-toggle="collapse" data-target="#demo2"><strong>Links Suggestion <i class="fa fa-angle-down" style="font-size:24px;color:white"></i></strong></h6>
@@ -173,7 +173,7 @@
               <div style="margin-left:40px;margin-top:40px;float:left">
                 <img src="{% static '/images/download.png' %}" onclick="downloadfile();">
               </div>
-              <div class="circle">
+              <div class="circle" style="margin-top: 15px; margin-right: 20px;">
                 <p style="margin-top: 20px;"><strong>{{score}}/100</strong></p>
               </div>
             </div>
@@ -191,8 +191,9 @@
     </div> 
     
     <script> 
-      document.onclick = hideMenu; 
-      document.oncontextmenu = rightClick; 
+      var txtarea = document.getElementById("tarea");
+      txtarea.onclick = hideMenu; 
+      txtarea.oncontextmenu = rightClick; 
 
       function hideMenu() { 
           document.getElementById( 
